@startuml
title 受理闭环 ER / 领域模型图（当前实现）

skinparam shadowing false
skinparam linetype ortho

package "Domain Model" {
  class Document {
    +documentId: DocumentId
    +kbId: String
    +fileHash: String?
    +filename: String
    +fileSize: long
    +status: UploadStatus
    +failureReason: String?
    +createdAt: Instant
    +updatedAt: Instant
  }

  class DocumentId {
    +value: String
  }

  enum UploadStatus {
    ACCEPTED
    UPLOADED
    INGESTING
    INDEXED
    FAILED
  }

  interface DocumentRepository {
    +save(document)
    +findById(documentId)
    +findByKbIdAndFileHash(kbId, fileHash)
    +findOldestByStatus(status)
    +compareAndSetStatus(documentId, expected, target, reason, updatedAt)
  }

  Document *-- DocumentId
  Document --> UploadStatus
  DocumentRepository ..> Document
}

package "Relational Model (PostgreSQL)" {
  entity "ingest_documents" as ingest_documents {
    * document_id : varchar(64) <<PK>>
    --
    * kb_id : varchar(128)
    file_hash : varchar(64)
    filename : varchar(512)
    * file_size : bigint
    * status : varchar(32)
    failure_reason : text
    * created_at : timestamptz
    * updated_at : timestamptz
    --
    UNIQUE INDEX uk_ingest_documents_kb_file_hash
    (kb_id, file_hash) WHERE file_hash IS NOT NULL
  }
}

package "File Storage (Local FS)" {
  entity "{root}/{documentId}/{filename}" as source_file {
    * path : string
    * content : bytes
  }
}

class "JdbcDocumentRepository\n(Adapter)" as JdbcRepo
class "LocalDocumentSourceStorage\n(Adapter)" as LocalStorage

DocumentRepository <|.. JdbcRepo
JdbcRepo --> ingest_documents : SQL (UPSERT/SELECT/CAS)
LocalStorage --> source_file : save/load

note right of Document
领域对象表达业务语义与规则，
不直接依赖 SQL 与文件系统细节。
end note

note right of source_file
源文件保存策略：已存在则不覆盖，
保证首份受理内容稳定。
end note

@enduml
